<resources>
    <string name="app_name">Puz-zle</string>
    <string name="start">start</string>
    <string name="title">Puz-zle</string>
    <string name="pause">Pause</string>
    <string name="restart">restart</string>
    <string name="main_menu">Main Menu</string>
    <string name="_continue">Continue</string>
    <string name="beforChooser">Field size</string>
    <string-array name="modes">
        <item>4x3</item>
        <item>5x4</item>
        <item>6x5</item>
        <item>7x6</item>
    </string-array>

    <string-array name="pauseMenu">
        <item>Continue</item>
        <item>Restart</item>
        <item>Main Menu</item>
    </string-array>
    <string name="congrad">Congratulations</string>
    <string name="samsung">Samsung it school project</string>
    <string name="defaultName">Player</string>
    <string name="rec">High Scores</string>
    <string name="clear">Clear</string>
    <string name="fail">Time is up</string>
    <string name="fail_red">you better be faster</string>
</resources>
