<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

    </GridLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Space
            android:layout_width="wrap_content"
            android:layout_height="40dp" />
        <Button
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/_continue"
            android:id="@+id/continueButton"
            android:layout_gravity="center" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="80dp" />
        <Button
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/restart"
            android:id="@+id/restartButton"
            android:layout_gravity="center" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="180dp" />
        <Button
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/main_menu"
            android:id="@+id/mainMenuReturnButton"
            android:layout_gravity="center" />
    </LinearLayout>
</RelativeLayout>