<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowOrderPreserved="false"
        android:useDefaultMargins="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <Space
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_row="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:textSize="90dp" />


        <Space
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="1"
            android:layout_row="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beforChooser"
            android:id="@+id/beforeChooser"
            android:layout_row="2"
            android:layout_column="1"
            android:textStyle="bold"
            android:textSize="20dp" />

        <Spinner

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_row="3"
            android:layout_column="2"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView2"
            android:layout_marginBottom="33dp"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            android:layout_row="8"
            android:layout_column="1" />

        <Button
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/startButton"
            android:layout_above="@+id/textView2"
            android:layout_alignRight="@+id/textView"
            android:layout_alignEnd="@+id/textView"
            android:layout_row="6"
            android:layout_column="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView4"
            android:layout_marginBottom="33dp"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            android:layout_row="7"
            android:layout_column="1" />

    </GridLayout>

</RelativeLayout>